--- a/AutoClick/Pages/Shared/_Footer.cshtml
+++ b/AutoClick/Pages/Shared/_Footer.cshtml
@@ -41,7 +41,7 @@
     <div style="width: 289px; height: 143px; left: 40px; top: 40px; position: absolute; flex-direction: column; justify-content: center; align-items: flex-start; gap: 32px; display: inline-flex">
         <!-- Logo principal de AutoClick -->
         <div style="width: 100%; aspect-ratio: 4096/650; position: relative;">
-            <img src="https://autoclickstorage.blob.core.windows.net/logos/LOGOS%20AUTOCLICK-04.png?sv=2025-07-05&ss=b&srt=sco&st=2025-10-19T16%3A00%3A54Z&se=2025-10-26T16%3A00%3A54Z&sp=rtl&sig=DgE35zBPx1OH0VCwf6odZ98N0Hs%2BcJV6M2Moz4YybBA%3D" 
+            <img src="https://autoclickstorage.blob.core.windows.net/logos/LOGOS%20AUTOCLICK-04.png" 
                  alt="AutoClick.cr Logo" 
                  style="width: 100%; height: 100%; object-fit: contain; object-position: left;" />
         </div>
